<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/taskTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titolo_attività" />

        <!-- Durata stimata della task -->
        <EditText
            android:id="@+id/taskEstimatedDurationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_durata_stimata"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/addSubtaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_sotto_attività"
            android:layout_marginTop="12dp" />


        <LinearLayout
            android:id="@+id/subtasksContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
