<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistiche"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardStatistics"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/textUserTitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="3dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp">
                <TextView
                    android:id="@+id/textTasksTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_totali_user"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="3dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp">
                <TextView
                    android:id="@+id/textTasksCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_completate"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="3dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp">
                <TextView
                    android:id="@+id/textTasksInProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_in_corso_user"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="3dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp">
                <TextView
                    android:id="@+id/textTasksPending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_da_iniziare_user"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textCompletionRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/percentuale_task_completate_in_tempo_user"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textAvgTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_task_time"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textPrize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prize_obtained"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/textPrizeToReedeem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prize_to_redeem"
                    android:textSize="18sp"
                    android:padding="12dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textPrizeCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:textColor="#888888"
                android:text="@string/prize_caption" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>