<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subtaskEmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/noSubTask"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtaskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonContainer"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/positionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/sendPos"
                android:src="@drawable/ic_location"
                android:visibility="gone"
                app:fabSize="normal"
                app:backgroundTint="@android:color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="4dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/commentImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/noteAndImage"
                android:src="@drawable/ic_chat"
                app:fabSize="normal"
                app:backgroundTint="@android:color/white"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="4dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/terminateActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endTask"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>